--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
         "express": "^4.17.1",
         "pg": "^8.7.1",
         "reflect-metadata": "^0.1.13",
-        "typeorm": "^0.2.39"
+        "typeorm": "^0.2.39",
+        "yup": "^0.32.11"
     },
     "devDependencies": {
         "@types/express": "^4.17.13",
+        "@types/yup": "^0.29.13",
         "@typescript-eslint/eslint-plugin": "^5.3.1",
         "@typescript-eslint/parser": "^5.3.1",
         "eslint": "^8.2.0",
