--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
         "typeorm": "ts-node-dev ./node_modules/typeorm/cli"
     },
     "dependencies": {
+        "date-fns": "^2.25.0",
         "express": "^4.17.1",
+        "express-async-errors": "^3.1.1",
         "pg": "^8.7.1",
         "reflect-metadata": "^0.1.13",
         "typeorm": "^0.2.39",
